finally fixed alignment issue with logout btn

--- a/public/style.css
+++ b/public/style.css
@@ -100,8 +100,10 @@ a {
 
 #btn-logout {
   position: absolute;
-  top: 7.5rem;
-  left: 1.85rem;
+  left: 50%;
+  top: 100%;
+  transform: translateX(-50%);
+  text-wrap: nowrap;
 }
 
 #edit-user-form {
